# GUI_image_pipeline

./: README.MD  pyproject.toml
src/: img_processor.py  main.py
